# cargo-didiuse

./: .gitignore  AGENTS.md  Cargo.toml  README.md  mise.toml
src/: errors.rs  lib.rs  main.rs
test_data/: vuln_report.json
test_data/test_implementation/: Cargo.toml
test_data/test_implementation/src/: aliasimport.rs  lib.rs  main.rs  used_as_dot.rs
test_data/vulnerablepackage/: Cargo.toml
test_data/vulnerablepackage/src/: lib.rs
test_data/workspace_layout/: Cargo.toml
test_data/workspace_layout/crates/consumer/: Cargo.toml
test_data/workspace_layout/crates/consumer/src/: lib.rs
tests/: lib.rs
