[package]
name = "cargo-didiuse"
version = "0.0.2"
edition = "2024"
readme = "README.md"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
glob = "0.3.3"
home = "0.5.12"
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
rustsec = { version = "0.32.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syn = { version = "2.0.117", features = ["full", "visit"] }
thiserror = "2.0.18"
toml = "1.0.3"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.26.0"
